Fix text (particularly long URLs) running outside of the green category description box. [Applied CSS style:  word-wrap: break-word;]

--- a/sites/all/themes/midtlink/custom.css
+++ b/sites/all/themes/midtlink/custom.css
@@ -20,6 +20,7 @@
 	text-align:center;
 }
 .categorydescription {
+        word-wrap: break-word;
 	font-size: 12px;
 	border: 1px solid #32984b;
 	padding: 10px;
